src/test/deca/context/valid/provided/hello-world.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2016

{
        println("Hello, world!");
}
